fix up tenant change tests